[gd_scene load_steps=10 format=3 uid="uid://b7gnu6s8jwg6s"]

[ext_resource type="Script" uid="uid://bf3hxqmpfv7pa" path="res://scripts/wave_controller.gd" id="1_xqgid"]
[ext_resource type="Script" uid="uid://b354osit2hj1r" path="res://scripts/upgrades.gd" id="2_lcqq5"]
[ext_resource type="Resource" uid="uid://jqs7r5bx5wsq" path="res://resources/upgrades.tres" id="3_7ytsp"]
[ext_resource type="PackedScene" uid="uid://djoahi43jc561" path="res://prefabs/hud/Card.tscn" id="3_s2aw2"]
[ext_resource type="Texture2D" uid="uid://borf4eayxmobq" path="res://assets/pickups/coin.png" id="5_c8bf3"]

[sub_resource type="Theme" id="Theme_le1v4"]
default_font_size = 80
Label/colors/font_color = Color(1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_cccq3"]
length = 0.001

[sub_resource type="Animation" id="Animation_0fpmw"]
resource_name = "wave"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaveIncoming:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 3.96667, 4.96667),
"transitions": PackedFloat32Array(2.82842, 0.87055, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ybhc"]
_data = {
&"RESET": SubResource("Animation_cccq3"),
&"wave": SubResource("Animation_0fpmw")
}

[node name="WaveController" type="Node2D"]
script = ExtResource("1_xqgid")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="WaveTimeout" type="Timer" parent="."]
wait_time = 5.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CurrentWave" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -195.0
offset_top = 4.0
offset_right = -3.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Current Wave: "
horizontal_alignment = 2

[node name="Enemies" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -195.0
offset_top = 26.0
offset_right = -3.0
offset_bottom = 53.0
grow_horizontal = 0
text = "Enemies Remaining: "
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="WaveIncoming" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -13.5
offset_right = 96.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_le1v4")
theme_override_colors/font_color = Color(1, 1, 1, 0)
text = "Wave Incoming"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
&"": SubResource("AnimationLibrary_7ybhc")
}

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("2_lcqq5")
upgrades = ExtResource("3_7ytsp")

[node name="PickUpgrade" type="CanvasLayer" parent="Node2D"]
process_mode = 3
visible = false

[node name="Control" type="Control" parent="Node2D/PickUpgrade"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/PickUpgrade/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D/PickUpgrade/Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Card" parent="Node2D/PickUpgrade/Control/VBoxContainer/HBoxContainer" instance=ExtResource("3_s2aw2")]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="Control" type="Control" parent="Node2D/PickUpgrade/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Card2" parent="Node2D/PickUpgrade/Control/VBoxContainer/HBoxContainer" instance=ExtResource("3_s2aw2")]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="Control2" type="Control" parent="Node2D/PickUpgrade/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Card3" parent="Node2D/PickUpgrade/Control/VBoxContainer/HBoxContainer" instance=ExtResource("3_s2aw2")]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="Button" type="Button" parent="Node2D/PickUpgrade/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -162.0
offset_top = -98.0
offset_right = 163.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D/PickUpgrade/Control/Button"]
layout_mode = 0
offset_right = 325.0
offset_bottom = 81.0
scale = Vector2(1, 0.992115)
theme_override_constants/separation = 12
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Node2D/PickUpgrade/Control/Button/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture = ExtResource("5_c8bf3")

[node name="Control" type="Control" parent="Node2D/PickUpgrade/Control/Button/HBoxContainer"]
layout_mode = 2

[node name="Cost" type="Label" parent="Node2D/PickUpgrade/Control/Button/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D/PickUpgrade/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -162.5
offset_right = 162.5
offset_bottom = 81.0
grow_horizontal = 2
scale = Vector2(1, 0.992115)
theme_override_constants/separation = 12
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Node2D/PickUpgrade/Control/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture = ExtResource("5_c8bf3")

[node name="Control" type="Control" parent="Node2D/PickUpgrade/Control/HBoxContainer"]
layout_mode = 2

[node name="Money" type="Label" parent="Node2D/PickUpgrade/Control/HBoxContainer"]
layout_mode = 2
text = "0"

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="WaveTimeout" to="." method="_on_wave_timeout_timeout"]
[connection signal="visibility_changed" from="Node2D/PickUpgrade" to="Node2D" method="_on_pick_upgrade_visibility_changed"]
[connection signal="pressed" from="Node2D/PickUpgrade/Control/Button" to="Node2D" method="_on_button_pressed"]
